--- a/aulas/ex022b/fundo006.html
+++ b/aulas/ex022b/fundo006.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            /*background shorthand*/
+            background: black url(imagens/wallpaper002.jpg) center top no-repeat fixed;
+            background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -26,7 +31,21 @@
 <body>
     <main>
         <h1>Teste de imagem</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere soluta vel tempora ad mollitia ipsum assumenda, temporibus veniam asperiores quia impedit sint quas molestiae, similique omnis nemo neque? Consequatur, sit! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat harum nam fugit ipsa dolore quo similique, perferendis repellendus totam fugiat deserunt. Fugit exercitationem sint, necessitatibus fugiat debitis odit architecto rerum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab, cupiditate velit quasi reiciendis voluptatem dolor ipsa tempora, distinctio nihil aliquam mollitia iste, ipsam quam. Voluptas similique amet sequi deserunt fuga?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere soluta vel tempora ad mollitia ipsum assumenda, temporibus veniam asperiores quia impedit sint quas molestiae, similique omnis nemo neque? Consequatur, sit! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat harum nam fugit ipsa dolore quo similique, perferendis repellendus totam fugiat deserunt. Fugit exercitationem sint, necessitatibus fugiat debitis odit architecto rerum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere soluta vel tempora ad mollitia ipsum assumenda, temporibus veniam asperiores quia impedit sint quas molestiae, similique omnis nemo neque? Consequatur, sit! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat harum nam fugit ipsa dolore quo similique, perferendis repellendus totam fugiat deserunt. Fugit exercitationem sint, necessitatibus fugiat debitis odit architecto rerum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere soluta vel tempora ad mollitia ipsum assumenda, temporibus veniam asperiores quia impedit sint quas molestiae, similique omnis nemo neque? Consequatur, sit! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat harum nam fugit ipsa dolore quo similique, perferendis repellendus totam fugiat deserunt. Fugit exercitationem sint, necessitatibus fugiat debitis odit architecto rerum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere soluta vel tempora ad mollitia ipsum assumenda, temporibus veniam asperiores quia impedit sint quas molestiae, similique omnis nemo neque? Consequatur, sit! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat harum nam fugit ipsa dolore quo similique, perferendis repellendus totam fugiat deserunt. Fugit exercitationem sint, necessitatibus fugiat debitis odit architecto rerum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere soluta vel tempora ad mollitia ipsum assumenda, temporibus veniam asperiores quia impedit sint quas molestiae, similique omnis nemo neque? Consequatur, sit! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat harum nam fugit ipsa dolore quo similique, perferendis repellendus totam fugiat deserunt. Fugit exercitationem sint, necessitatibus fugiat debitis odit architecto rerum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere soluta vel tempora ad mollitia ipsum assumenda, temporibus veniam asperiores quia impedit sint quas molestiae, similique omnis nemo neque? Consequatur, sit! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat harum nam fugit ipsa dolore quo similique, perferendis repellendus totam fugiat deserunt. Fugit exercitationem sint, necessitatibus fugiat debitis odit architecto rerum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere soluta vel tempora ad mollitia ipsum assumenda, temporibus veniam asperiores quia impedit sint quas molestiae, similique omnis nemo neque? Consequatur, sit! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat harum nam fugit ipsa dolore quo similique, perferendis repellendus totam fugiat deserunt. Fugit exercitationem sint, necessitatibus fugiat debitis odit architecto rerum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        </p>
+
     </main>
 </body>
 </html>
