--- a/desafios/desafio012/index.html
+++ b/desafios/desafio012/index.html
@@ -25,7 +25,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img001">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -60,7 +60,7 @@
         
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img002">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -80,7 +80,7 @@
             A pessoa foi embora <br>
             Abriu outro aplicativo <br>
             O mundo ficou cativo <br>
-            Da tecnologia do agora. <br>
+            Da tecnologia do agora.
         </p>
 
         <p>
